adaptation mobile fixin  the project

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -17,6 +17,108 @@ body {
   
 }
 
+.layers {
+  // background: rgb(0,17,30);
+  // background: -moz-linear-gradient(top,  rgba(0,17,30,1) 0%, rgba(215 214 215) 100%);
+  // background: -webkit-linear-gradient(top,  rgba(0,17,30,1) 0%,rgba(215 214 215) 100%);
+  // background: linear-gradient(to bottom,  rgba(0,17,30,1) 0%,rgba(215 214 215) 100%);
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00111e', endColorstr='#033d5e',GradientType=0 );
+  background-color: rgb(215 214 215); 
+  height: auto;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+}
+
+.layer {
+  height: 100%;
+  position: absolute;
+  transform: translate3d(0, -100%, 0);
+  width: 100%;
+}
+
+.layer--background {
+  animation: fallLoop 30000ms linear infinite; /* Было 10000ms, увеличено до 30000ms */
+  opacity: 0.4;
+
+  .snowflake {
+      animation: spin 25000ms linear infinite; /* Можно тоже немного увеличить */
+      height: 20%;
+  }
+}
+
+.layer--middleground {
+  animation: fallLoop 22500ms linear infinite; /* Было 7500ms, увеличено до 22500ms */
+  opacity: 0.6;
+
+  .snowflake {
+      animation: spin 20000ms linear infinite;
+      height: 33.33333%;
+  }
+}
+
+.layer--foreground {
+  animation: fallLoop 15000ms linear infinite; /* Было 5000ms, увеличено до 15000ms */
+  opacity: 0.8;
+
+  .snowflake {
+      animation: spin 15000ms linear infinite;
+      height: 50%;
+  }
+}
+
+.snowflakes { 
+  align-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;    
+  height: 100%;
+  position: relative;
+  width: 100%;
+}
+
+.snowflake {
+  box-sizing: border-box;
+
+  svg {
+      height: 100%;
+      width: 100%;
+  }
+}
+
+.snowflake--small {
+  width: 10%;
+
+  svg {
+      height: 70%;
+  }
+}
+
+.snowflake--medium {
+  width: 20%;
+
+  svg {
+      height: 80%;
+  }
+}
+
+.snowflake--large {
+  width: 30%;
+
+  svg {
+      height: 100%;
+  }
+}
+
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(359deg); }
+}
+
+@keyframes fallLoop {
+  from { transform: translate3d(0, -100%, 0); }
+  to { transform: translate3d(0, 0%, 0); }
+}
+
 
 h2 {
   font-family: "Poppins", serif;
